<!-- Created by Adam Barron on 03/02/2018 -->
<!-- Contains all settings -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title = "@string/pref_header_user_details"
        android:key = "user_details">
        <EditTextPreference
            android:capitalize="words"
            android:inputType="textCapWords"
            android:key="@string/pref_key_display_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_key_display_name"
            android:title="@string/pref_title_display_name" />

        <EditTextPreference
            android:capitalize="words"
            android:inputType="textCapWords"
            android:key="@string/pref_key_email_address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_key_email_address"
            android:title="@string/pref_title_email_address" />

        <Preference
            android:title="@string/pref_title_reset_data"
            android:summary="@string/pref_description_reset_data"
            android:key="@string/pref_key_reset_data"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_accessibility"
        android:key = "accessibility">
        <SwitchPreference
            android:defaultValue="false"
            android:id="@+id/theme_switch"
            android:key="@string/pref_key_improved_readability_background"
            android:summary="@string/pref_description_improved_readability_background"
            android:title="@string/pref_title_improved_readability_background" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_header_about"
        android:key="about">
        <Preference
            android:title="@string/pref_title_privacy_policy"
            android:key="@string/pref_key_privacy_policy"
            android:summary="@string/pref_description_privacy_policy"/>
        <Preference
            android:title="@string/pref_title_website"
            android:summary="@string/pref_description_website">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/website"/>
        </Preference>
        <Preference
            android:selectable="false"
            android:summary="@string/pref_about_text"/>
    </PreferenceCategory>

</PreferenceScreen>
