<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_layout"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/dialog_box_contact_us_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/successful_title"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="20dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:text="@string/successful_next_step_for_user"
        android:layout_marginTop="10dp"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/button_contact_us_form_confirm"
        android:text="@string/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"/>


</LinearLayout>