<?xml version="1.0" encoding="utf-8"?>
<!-- Created by Andreea Stirbu on 13/04/2018 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- CardView for news -->
    <android.support.v7.widget.CardView
        style="@style/list_item_card_view"
        android:id="@+id/news_card_view"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardMaxElevation="@dimen/card_max_elevation"
        android:layout_marginBottom="@dimen/margin_bottom_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- The news' image -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newsImage"
                android:src="@drawable/latest"
                android:padding="@dimen/padding_latest_view"
                android:layout_margin="@dimen/margin_latest_view"/>

            <!-- The news' title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newsTitle"
                android:text="@string/title"
                android:padding="@dimen/padding_latest_view"
                android:layout_margin="@dimen/margin_latest_view"/>

            <!-- The news' description -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newsDescription"
                android:text="@string/description"
                android:padding="@dimen/padding_latest_view"/>

            <!-- The news' read more button-->
            <Button
                android:id="@+id/newsReadMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bottom_button"
                android:text="@string/read_more"
                android:theme="@style/PrimaryFlatButton" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>